--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body {
 }
 
 /* Navbar start  */
-.navbar-container {
+.navbar-container,
+.banner {
   max-width: 1250px;
   margin: 0 auto;
 }
@@ -51,9 +52,70 @@ body {
   /* margin-top: 85px; */
   line-height: 60px;
   display: none;
-  cursor: pointer;
 }
+
 #check {
   display: none;
 }
 /* Navbar close */
+
+/* banner start  */
+.banner {
+  background-image: url(Images/bannerpic.png);
+  height: 500px;
+  margin-top: 50px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 16px;
+}
+.banner-details {
+  border-radius: 16px;
+  padding-top: 100px;
+  text-align: center;
+  background: linear-gradient(
+    180deg,
+    rgba(41, 41, 57, 0.8) 0%,
+    rgba(19, 19, 24, 0) 100%
+  );
+}
+.banner-details h1 {
+  color: #fff;
+  font-size: 64px;
+  font-weight: 800;
+  margin-bottom: 24px;
+}
+.banner-details p {
+  color: #fff;
+  text-align: center;
+  font-weight: 400;
+  font-size: 16px;
+  margin-bottom: 40px;
+}
+.banner-search-option {
+  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.3);
+  padding: 16px;
+  width: 60%;
+  margin-left: 210px;
+}
+.banner-search-option input,
+select {
+  border-radius: 8px;
+  font-size: 16px;
+  width: 174px;
+  height: 42px;
+  padding: 12px;
+  font-weight: 400;
+  color: rgba(19, 19, 24, 0.5);
+  border: 0;
+}
+.primary-button {
+  border-radius: 8px;
+  font-size: 16px;
+  width: 174px;
+  height: 42px;
+  padding: 12px;
+  background: #ff5400;
+  color: #fff;
+  border: 0;
+}
